# goodcang_server

./: .dockerignore  README.md  claude.md  dockerfile  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: assistant.py  auth.py  base_data.py  finance.py  inbound_order.py  inventory.py  order.py  plan_order.py  product.py  test.py  (+1 more)
app/client/: assistant.py  base.py  base_data.py  finance.py  inbound_order.py  inventory.py  order.py  plan_order.py  product.py  return_order.py
app/config/: settings.py
app/crud/: __init__.py  base.py  crud_inbound_order.py  crud_inventory.py  crud_order.py  crud_product.py  crud_user.py
app/crud/sql/: init_product.sql  init_user.sql
app/db/: session.py
app/models/: __init__.py  assistant.py  base_data.py  finance.py  inbound_order.py  inventory.py  order.py  order_item.py  plan_order.py  product.py  product_ext.py  return_order.py  user.py
app/schemas/: assistant.py  base_data.py  common.py  finance.py  inbound_order.py  inventory.py  order.py  plan_order.py  product.py  product_ext.py  return_order.py  user.py
app/services/: __init__.py  auth_service.py  base_data_service.py  finance_service.py  inbound_order.py  inbound_order_service.py  inventory_service.py  order_service.py  plan_order_service.py  product_service.py  return_order.py  return_order_service.py
docs/: api.md
docs/client/: assistant.md  base_data.md  finance.md  inbound_order.md  inventory.md  order.md  plan_order.md  product.md  return_order.md
sql/: 01_product.sql  02_inventory.sql  03_order.sql  04_inbound_order.sql  README.md
